typed-i18n/tests/compile-fail/demo.lrc
# hello
en Hello
# hello_you
en Hello %{name}
# hello_you_w_icon
en Hello %{name}*{icon}
